WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89883
GraphicsSurface: Fix IOSurfaceLock failures on Intel video cards.
https://bugs.webkit.org/show_bug.cgi?id=89883
Summary
GraphicsSurface: Fix IOSurfaceLock failures on Intel video cards.
Jocelyn Turcotte
Reported
2012-06-25 08:48:49 PDT
GraphicsSurface: Fix IOSurfaceLock failures on Intel video cards.
Attachments
Patch
(2.71 KB, patch)
2012-06-25 08:57 PDT
,
Jocelyn Turcotte
noam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-06-25 08:57:08 PDT
Created
attachment 149298
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-06-26 03:18:09 PDT
Committed
r121249
: <
http://trac.webkit.org/changeset/121249
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug