GraphicsSurface: Fix IOSurfaceLock failures on Intel video cards. https://bugs.webkit.org/show_bug.cgi?id=89883

Reviewed by Noam Rosenthal.

Follow the documentation which says: "If locking the buffer requires a readback,
the lock will fail with an error return of kIOReturnCannotLock."
Also make sure that we use the same set of flags when locking and unlocking
for simplicity and to follow this requirement on the kIOSurfaceLockReadOnly flag.

* platform/graphics/surfaces/mac/GraphicsSurfaceMac.cpp:
(WebCore::GraphicsSurface::platformLock):
(WebCore::GraphicsSurface::platformUnlock):

Canonical link: https://commits.webkit.org/107819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121249 268f45cc-cd09-0410-ab3c-d52691b4dbfc